--- a/ErrorTrackerServer/package.json
+++ b/ErrorTrackerServer/package.json
@@ -30,6 +30,7 @@
         "image-webpack-loader": "4.6.0",
         "style-loader": "1.2.0",
         "svg-sprite-loader": "4.2.5",
+        "terser-webpack-plugin": "2.3.7",
         "url-loader": "2.3.0",
         "vue-loader": "15.9.2",
         "vue-style-loader": "4.1.2",
@@ -38,6 +39,7 @@
         "webpack-bundle-analyzer": "3.8.0",
         "webpack-cli": "3.3.11",
         "webpack-dev-server": "3.11.0",
-        "webpack-hot-middleware": "2.25.0"
+        "webpack-hot-middleware": "2.25.0",
+        "webpack-manifest-plugin": "2.2.0"
     }
 }
