Fixed an issue where filter action execution was slow when modifying more than a few events at a time, as is common when manually executing filters on a large folder.  Most DB transactions are now deferred until the end of the filtering operation, allowing them to be done in bulk (many fewer overall transactions). Added a button to the Filter List to "Run enabled filters against all events". The folder context menu now offers the ability to run all enabled filters. Misc tweaks.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\SessionStatus.cs" />
     <Compile Include="Controllers\ChangePW.cs" />
     <Compile Include="Controllers\FilterData.cs" />
+    <Compile Include="Filtering\DeferredActionCollection.cs" />
     <Compile Include="Filtering\FilterEngine.cs" />
     <Compile Include="Controllers\FolderData.cs" />
     <Compile Include="Controllers\EventData.cs" />
@@ -125,6 +126,7 @@
       <DependentUpon>ErrorTrackerSvc.cs</DependentUpon>
     </Compile>
     <Compile Include="Code\Program.cs" />
+    <Compile Include="Filtering\ActionAggregator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Code\Util.cs" />
     <Compile Include="Code\WebServer.cs" />
