Authenticated session idle limit increased from 10 minutes to 1.5 days. The system name "Error Tracker" can now be changed in Admin > Settings. Fixed path creation by FilterActions, which was broken. After moving events manually, the toast message now includes the path of the destionation folder. VSvg and SvgButton components will now show the content of their title prop in a tooltip.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -215,6 +215,7 @@
     <Content Include="www\images\sprite\network.svg" />
     <Content Include="www\images\sprite\remove.svg" />
     <Content Include="www\images\sprite\remove_computer.svg" />
+    <Content Include="www\images\sprite\search.svg" />
     <Content Include="www\images\sprite\settings.svg" />
     <Content Include="www\images\sprite\settings_network.svg" />
     <Content Include="www\images\sprite\user.svg" />
