Conditions and the condition handling rule can now be specified when adding a new Filter. When adding a new Filter, the computation of the "Order" argument is now done within the db transaction to improve thread safety. Advanced Search conditions can now be loaded from or written to a Filter. Advanced Search now has a checkbox to require all conditions to be met.  Enabled by default, it can be unchecked to require only one condition to be met.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -169,6 +169,7 @@
     <None Include="www\vues\client\projectdisplay\folder\FolderBrowser.vue" />
     <None Include="www\vues\client\projectdisplay\ResizeBar.vue" />
     <None Include="www\vues\client\projectdisplay\ProjectDisplay.vue" />
+    <None Include="www\vues\client\controls\SelectFilterPopup.vue" />
     <None Include="www\vues\common\controls\ConfirmPopup.vue" />
     <None Include="www\vues\common\controls\ModalDialog.vue" />
     <None Include="www\vues\common\controls\ModalDialogContainer.vue" />
