--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -177,7 +177,9 @@
     <None Include="www\vues\client\projectdisplay\ResizeBar.vue" />
     <None Include="www\vues\client\projectdisplay\ProjectDisplay.vue" />
     <None Include="www\vues\client\controls\SelectFilterPopup.vue" />
+    <None Include="www\vues\common\controls\GeolocateIPPopup.vue" />
     <None Include="www\vues\common\controls\ConfirmPopup.vue" />
+    <None Include="www\vues\common\controls\GeolocationEmbed.vue" />
     <None Include="www\vues\common\controls\ModalDialog.vue" />
     <None Include="www\vues\common\controls\ModalDialogContainer.vue" />
     <None Include="www\vues\common\controls\ColorInputPopup.vue" />
