The undo/redo functions now show a full-screen modal progress dialog while appropriate. Undo/redo functions now include their own toasts in certain error conditions. Fixed a bug where closing all dialogs (e.g. when session is lost) would not actually close all dialogs if there was more than one. Fixed several broken edge cases regarding event selection state, folder unread counts, and moving/deleting events.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -177,6 +177,7 @@
     <None Include="www\vues\client\projectdisplay\ResizeBar.vue" />
     <None Include="www\vues\client\projectdisplay\ProjectDisplay.vue" />
     <None Include="www\vues\client\controls\SelectFilterPopup.vue" />
+    <None Include="www\vues\common\controls\ProgressPopup.vue" />
     <None Include="www\vues\common\controls\GeolocateIPPopup.vue" />
     <None Include="www\vues\common\controls\ConfirmPopup.vue" />
     <None Include="www\vues\common\controls\GeolocationEmbed.vue" />
