Added email configuration fields and email notification of problems in the execution of ErrorTrackerService. It is now possible for a Project to clone incoming events to other Projects.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Authentication\User.cs" />
     <Compile Include="BCrypt\BCrypt.cs" />
     <Compile Include="BCrypt\SaltParseException.cs" />
+    <Compile Include="Code\Emailer.cs" />
     <Compile Include="Code\WebpackChunkResolver.cs" />
     <Compile Include="Config\Settings.cs" />
     <Compile Include="Config\Project.cs" />
