--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -82,6 +82,7 @@
     <Compile Include="API\ProjectRequestBase.cs" />
     <Compile Include="API\ApiRequestBase.cs" />
     <Compile Include="API\ApiResponseBase.cs" />
+    <Compile Include="Authentication\ErrorTrackerPasswordReset.cs" />
     <Compile Include="Authentication\ServerSession.cs" />
     <Compile Include="Authentication\SessionManager.cs" />
     <Compile Include="Authentication\User.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Controllers\BaseControllers\UserController.cs" />
     <Compile Include="Controllers\BaseControllers\AdminController.cs" />
     <Compile Include="Controllers\BaseControllers\ETController.cs" />
+    <Compile Include="Controllers\ForgotPW.cs" />
     <Compile Include="Controllers\LoginRecordData.cs" />
     <Compile Include="Controllers\SearchData.cs" />
     <Compile Include="Controllers\SessionStatus.cs" />
