--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Controllers\SessionStatus.cs" />
     <Compile Include="Controllers\ChangePW.cs" />
     <Compile Include="Controllers\FilterData.cs" />
+    <Compile Include="Database\DBBase.cs" />
     <Compile Include="Database\Global\GlobalDb.cs" />
     <Compile Include="Database\Global\Model\LoginRecord.cs" />
     <Compile Include="Database\Global\Model\DbVersion.cs" />
