Greatly reduced CPU overhead of EventBrowser scrolling by converting some computed properties into data fields that get updated in response to a "watch". Added verbose logging of the event submission process for debugging purposes. Moved most of the event submission logic into FilterEngine so that the dupe check, insert, and filtering are now done within a transaction to improve reliability. Added Event ID to tooltip when mousing over the main heading in EventDetails. Misc minor tweaks.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Controllers\BaseControllers\AdminController.cs" />
     <Compile Include="Controllers\BaseControllers\ETController.cs" />
     <Compile Include="Controllers\ForgotPW.cs" />
+    <Compile Include="Filtering\FilterException.cs" />
     <Compile Include="Controllers\LoginRecordData.cs" />
     <Compile Include="Controllers\SearchData.cs" />
     <Compile Include="Controllers\SessionStatus.cs" />
