--- a/ErrorTrackerServer/packages.config
+++ b/ErrorTrackerServer/packages.config
@@ -1,13 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net472" />
   <package id="sqlite-net-pcl" version="1.7.335" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_green" version="2.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.core" version="2.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.3" targetFramework="net472" />
   <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="WebPush" version="1.0.11" targetFramework="net472" />
 </packages>
