--- a/ErrorTrackerServer/packages.config
+++ b/ErrorTrackerServer/packages.config
@@ -2,24 +2,15 @@
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Npgsql" version="6.0.3" targetFramework="net472" />
+  <package id="PetaPoco.Compiled" version="6.0.480" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net472" />
-  <package id="RepoDb" version="1.12.10" targetFramework="net472" />
-  <package id="RepoDb.PostgreSql" version="1.1.5" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
-  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Linq.Async" version="6.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
-  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
-  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="6.0.0" targetFramework="net472" />
