--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -51,8 +51,20 @@
     <Reference Include="Npgsql, Version=6.0.3.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\Npgsql.6.0.3\lib\netstandard2.0\Npgsql.dll</HintPath>
     </Reference>
-    <Reference Include="PetaPoco, Version=6.0.480.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\PetaPoco.Compiled.6.0.480\lib\net45\PetaPoco.dll</HintPath>
+    <Reference Include="SQLite-net, Version=1.8.116.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\sqlite-net-pcl.1.8.116\lib\netstandard2.0\SQLite-net.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.batteries_v2, Version=2.0.4.976, Culture=neutral, PublicKeyToken=8226ea5df37bcae9, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_green.2.0.4\lib\net461\SQLitePCLRaw.batteries_v2.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.core, Version=2.0.4.976, Culture=neutral, PublicKeyToken=1488e028ca7ab535, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.core.2.0.4\lib\netstandard2.0\SQLitePCLRaw.core.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.nativelibrary, Version=2.0.4.976, Culture=neutral, PublicKeyToken=502ed628492ab262, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.bundle_green.2.0.4\lib\net461\SQLitePCLRaw.nativelibrary.dll</HintPath>
+    </Reference>
+    <Reference Include="SQLitePCLRaw.provider.dynamic_cdecl, Version=2.0.4.976, Culture=neutral, PublicKeyToken=b68184102cba0b3b, processorArchitecture=MSIL">
+      <HintPath>..\packages\SQLitePCLRaw.provider.dynamic_cdecl.2.0.4\lib\netstandard2.0\SQLitePCLRaw.provider.dynamic_cdecl.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -123,6 +135,12 @@
     <Compile Include="Code\DatabaseSetupForm.Designer.cs">
       <DependentUpon>DatabaseSetupForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Code\DatabaseSqliteMigrateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Code\DatabaseSqliteMigrateForm.Designer.cs">
+      <DependentUpon>DatabaseSqliteMigrateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Code\Emailer.cs" />
     <Compile Include="Code\IPAddressConverter.cs" />
     <Compile Include="Code\PushManager.cs" />
@@ -138,6 +156,22 @@
     <Compile Include="Controllers\PushData.cs" />
     <Compile Include="Database\Creation\DbCreation.cs" />
     <Compile Include="Database\Creation\DbHelper.cs" />
+    <Compile Include="Database\PPMapper.cs" />
+    <Compile Include="Database\SQLiteMigration\DBBase.cs" />
+    <Compile Include="Database\SQLiteMigration\Global\GlobalDb.cs" />
+    <Compile Include="Database\SQLiteMigration\Global\Model\DbVersion.cs" />
+    <Compile Include="Database\SQLiteMigration\Global\Model\LoginRecord.cs" />
+    <Compile Include="Database\SQLiteMigration\HexStringJsonConverter.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\DB.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\FolderStructure.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\DbVersion.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\Event.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\Filter.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\FilterAction.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\FilterCondition.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\Folder.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\ReadState.cs" />
+    <Compile Include="Database\SQLiteMigration\Project\Model\Tag.cs" />
     <Compile Include="Filtering\FilterException.cs" />
     <Compile Include="Controllers\LoginRecordData.cs" />
     <Compile Include="Controllers\SearchData.cs" />
@@ -260,7 +294,7 @@
     <Content Include="7zip\7zip_License.txt" />
     <Content Include="Database\Creation\SQL\DbSetup_A_CreateRole.sql" />
     <Content Include="Database\Creation\Readme.txt" />
-    <Content Include="Database\Project\v2\Notes.txt" />
+    <Content Include="Database\SQLiteMigration\Readme.txt" />
     <Content Include="webpack.config.js" />
     <Content Include="www\404.html" />
     <Content Include="www\api\PushData.js" />
@@ -331,6 +365,9 @@
     <EmbeddedResource Include="Code\DatabaseSetupForm.resx">
       <DependentUpon>DatabaseSetupForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Code\DatabaseSqliteMigrateForm.resx">
+      <DependentUpon>DatabaseSqliteMigrateForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -339,6 +376,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ThirdParty\PetaPoco-1817f1f70bed769472ccd8a1c9bf25505513177a\PetaPoco\PetaPoco.csproj">
+      <Project>{34950558-c72c-4327-a380-98964a18df8a}</Project>
+      <Name>PetaPoco</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\BPUtil\BPUtil\BPUtil.csproj">
       <Project>{a4981d8d-debf-4b34-b9ce-ff25520a02b7}</Project>
       <Name>BPUtil</Name>
@@ -385,5 +426,7 @@ xcopy "$(ProjectDir)www\dist\*.*" "$(TargetDir)www\dist\*.*" /C /R /Y /I</PostBu
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets'))" />
+    <Error Condition="!Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets'))" />
   </Target>
+  <Import Project="..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets" Condition="Exists('..\packages\SQLitePCLRaw.lib.e_sqlite3.2.0.4\build\net461\SQLitePCLRaw.lib.e_sqlite3.targets')" />
 </Project>
