--- a/ErrorTrackerServer/packages.config
+++ b/ErrorTrackerServer/packages.config
@@ -6,6 +6,11 @@
   <package id="Npgsql" version="6.0.3" targetFramework="net472" />
   <package id="PetaPoco.Compiled" version="6.0.480" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net472" />
+  <package id="sqlite-net-pcl" version="1.8.116" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_green" version="2.0.4" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.4" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
