* Replaced basic dumb search with SQL Full Text Search that searches the message, tag values, and other searchable event fields including Color (interpreted as 6-digit hex string), Date (yyyy/MM/dd hh:mm:ss tt), and EventType.  This offers faster and more advanced searching, but is slightly limited in that it does not work like a simple string.Contains() call anymore, so partial word matches will typically not be found.   * It is possible to mimic the earlier simple search if needed by doing an advanced search on the Message, EventType, and SubType fields using "contains" matching, non-regex, and requiring only one condition to match.

--- a/ErrorTrackerServer/ErrorTrackerServer.csproj
+++ b/ErrorTrackerServer/ErrorTrackerServer.csproj
@@ -245,6 +245,7 @@
     <None Include="app.config" />
     <Content Include="Database\Global\SQL\2\GlobalSetup_2.sql" />
     <Content Include="Database\Project\SQL\6\ProjectSetup_6_1_Tables.sql" />
+    <Content Include="Database\Project\SQL\7\ProjectSetup_7_1.sql" />
     <Content Include="Database\Creation\SQL\DbSetup_C_CommentDb.sql" />
     <Content Include="Database\Creation\SQL\DbSetup_D_DropPublicSchema.sql" />
     <Content Include="Database\Creation\SQL\DbSetup_B_CreateDb.sql" />
